
0.5.1
* Fixed wrong name in OpenId provider namespace

0.5
* Added namespace support
* Improved db tests
* Improved html parser library
* Added pingback library
* Validate, parameter and body objects are now loaded in an DI container
* Load dependencies in _ini() method instead of __construct()
* Fixed markdown parser and sql select

0.4.7
* Added classes to generate an swagger api declaration and util annotation 
  parser
* Improved autoloader using stream_resolve_include_path before require the class
  so the autoload will not fail if the file doesnt exists
* Added new html5 filter collections
* Renamed PSX_Time to PSX_DateTime 
* Fix http redirection header of relative urls
* Added user agent string to most http calls
* Add cache to PSX_Base getRequest method so calling the method multiple times
  will always return the same object
* Improved PSX_Loader class. The name of the index method must be now __index
  wich is called if no other method is specified in the request. This was done 
  because of constructor conflict. Added annotation parser to loader for easier 
  routing 
* Added method getValidator(), getMethod(), getUrl(), getHeaders(), getHeader(), 
  getParameter() and getBody() to PSX_ModuleAbstract
* Using PSX_PATH_CACHE path in file cache handler
* Fix markdown class encode emphasis
* Add method setSavePath to PSX_Session class

0.4.6
* Added Atom and RSS static request method
* Improved docblock comments
* Removed unused DOM package
* Changed constructor of PSX_Sql class
* Added cookie store to http package
* Improved cache classes and tests
* Moved class PSX_Get, PSX_Post, PSX_Cookie, PSX_Request, PSX_Files in input
* package and improved tests
* Updated paging class and tests
* Added calendar class
* Added improved psx html package add html5 lexer and filter library and updated
* html parser
* Added getParameters to dependency abstract
* Added view dependency and renamed module DefaultAbstract to ViewAbstract

0.4.5